syntax = "proto3";

option csharp_namespace = "TestServerGreeter";

package testGreet;

// The greeting service definition.
service TestServerGreeter {
  // Sends a greeting
  rpc SayHelloOne (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
